# rumarino-ros2-jazzy

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.headless  README.md  build.sh  requirements.txt  run_example.sh
.github/workflows/: headless-simulation.yml
blender_stonefish_plugin/: README.md  __init__.py  blender_extractor.py  config.yaml  config_new.yaml  daemon.py  example.blend  main.py  mesh_exporter.py  output.scn  stonefish_objects.py
src/: stonefish_ros2
src/bringup/: package.xml  setup.py
src/bringup/bringup/scripts/: oneshot_map.py
src/bringup/launch/: bringup.launch.py  test_mission_executor.launch.py  test_mission_executor_headless.launch.py  test_mission_planner.launch.py  test_rust.launch.py
src/bringup/scripts/: oneshot_map.py
src/controller/: CMakeLists.txt  package.xml
src/controller/include/: main.hh
src/controller/src/: main.cc
src/controller_arduino/: CMakeLists.txt  package.xml
src/controller_arduino/include/: glm  main.hh
src/controller_arduino/src/: main.cc
src/controller_stonefish/: package.xml  setup.cfg  setup.py
src/controller_stonefish/controller_stonefish/: thruster_teleop.py
src/controller_stonefish/data/scenarios/: hydrus_auv.scn  hydrus_auv_headless.scn  hydrus_env.scn  hydrus_env_headless.scn
src/controller_stonefish/launch/: hydrussim.launch.py
src/examples/: color_filters.py  distance.py  object_detector.py  orbs.py  plane_detection.py  slam_visuation.py
src/hydrus_cv/: package.xml  setup.cfg  setup.py
src/hydrus_cv/hydrus_cv/: benchmark.py  custom_types.py  cv_publisher.py  depth_publisher.py  detection_core.py  map_visualizer.py
src/hydrus_cv/launch/: depth_publisher.launch.py  slam_cv_pipeline.launch.py
src/hydrus_cv/rviz/: hydrus_cv.rviz
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: NavigateToWaypoint.action
src/interfaces/msg/: Detections.msg  Map.msg  MapObject.msg  MovingState.msg
src/interfaces/srv/: FireTorpedo.srv
src/mission_executor/: CMakeLists.txt  Cargo.toml  package.xml  r2r_cargo.cmake
src/mission_executor/.cargo/: config.toml
src/mission_executor/src/: main.rs  missions.rs  navigation.rs
src/mission_planner/: CMakeLists.txt  package.xml
src/mission_planner/include/: main.hh
src/mission_planner/src/: main.cc
src/mission_planner/test/: main.cc
src/mission_planner_rust/: Cargo.toml  bindings.h
src/mission_planner_rust/src/: main.rs  mission.rs  mission_scheduler.rs
src/mission_planner_rust/src/examples/: concurrent_mission_example.rs  mission_example.rs  mod.rs
src/orb_slam/: CMakeLists.txt  README.md  package.xml
src/orb_slam/config/: params.yaml  realsense_params.yaml  rgbd_params.yaml  usb_cam_params.yaml  webcam.yaml
src/orb_slam/launch/: mono_webcam.launch.py
src/orb_slam/scripts/: calibrate_camera.py
src/orb_slam/src/: monocular_node.cpp
src/zed_custom_wrapper/: CMakeLists.txt  README.md  package.xml
src/zed_custom_wrapper/include/zed_custom_wrapper/: zed_custom_node.hpp
src/zed_custom_wrapper/launch/: zed_custom.launch.py
src/zed_custom_wrapper/src/: zed_custom_node.cpp
