<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.1</version>
  <description>Orders around the arduino via serial for movement and torpedos</description>

  <maintainer email="jose.burgos40@upr.edu">José Burgos Guntín</maintainer>
  <license>Apache-2.0</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>rclcpp_action</depend>
  <depend>interfaces</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
