<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>mission_executor</name>
  <version>0.0.1</version>
  <description>Executes reactions correspoding to diferent objects defined in the mission that is passed in</description>
  <maintainer email="jose.burgos40@upr.edu">José Burgos Guntín</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rcl</depend>
  <depend>std_msgs</depend>
  <depend>interfaces</depend>
  <depend>nav_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
