<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zed_custom_wrapper</name>
  <version>0.0.1</version>
  <description>A minimal ZED ROS 2 wrapper for custom object detection, neural depth, and mapping.</description>
  <maintainer email="user@example.com">User</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>image_transport</depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_plugin_zed_od</exec_depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>zed_msgs</depend>
  <depend>interfaces</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
